cluster-cd/apps/bitty/media/readarr-calibre-tag-manager/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name readarr-calibre-tag-manager
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: *name
    app.kubernetes.io/part-of: *name
    k8s-app: *name
  name: *name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *name
      app.kubernentes.io/component: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *name
        app.kubernentes.io/component: *name
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        # fsGroup: 1000
      containers:
        - name: readarr-calibre-tag-manager
          image: ghcr.io/rtrox/readarr-calibre-tag-manager-dev:sha-5275c28-20241103213222
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 2048Mi
            requests:
              memory: 1024Mi
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   runAsUser: 1000
          #   seccompProfile:
          #     type: RuntimeDefault
          #   capabilities:
          #     drop:
          #       - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe: &probe
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          readinessProbe: *probe
          startupProbe: *probe
          # volumeMounts:
          #   - mountPath: /config
          #     name: config
          #   - mountPath: /media/books
          #     name: books
      # volumes:
      #   - name: config
      #     persistentVolumeClaim:
      #       claimName: calibre
      #   - name: books
      #     nfs:
      #       server: ${NFS_SERVER}
      #       path: /mnt/rusty/media/books
