cluster-cd/apps/bitty/media/readarr-calibre-tag-manager/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name readarr-calibre-tag-manager
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
    - name: server
      port: 8081
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
---
